...
    <string name="post_title_input">Add a title</string>
    <string name="post_description_label">Post Description</string>
    <string name="post_description_input">Tell us what you want to trade!</string>
    <string name="post_cat_label">Post Category</string>

    <string name="post_cat_input">Add a category</string>
    <string name="post_button_label">POST!</string>
    <string name="empty_string"/>
    <string name="empty_title">Please add a title!</string>
    <string name="empty_description">Please add a description!</string>
    <string name="empty_category">Please add a category!</string>
    <string name="status_label">[Status label]</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_email">Enter Email</string>
...
