<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/postPageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PostActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:background="#F3F3F3"
            android:orientation="vertical">


            <TextView
                android:id="@+id/postTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/posting_title_page"
                android:textColor="#67A520"
                android:textSize="32sp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/originalPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/post_title_label"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp">

            <EditText
                android:id="@+id/originalPosterField"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="173dp"
                android:layout_height="51dp"
                android:layout_marginEnd="152dp"
                android:layout_marginRight="152dp"
                android:layout_marginBottom="432dp"
                android:autofillHints="postTitle"
                android:hint="@string/post_title_input"
                android:inputType="text"
                android:textSize="16sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/postCategoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/post_cat_label"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <EditText
                android:id="@+id/categoryTextField"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="180dp"
                android:layout_height="51dp"
                android:layout_marginEnd="152dp"
                android:layout_marginRight="152dp"
                android:layout_marginBottom="432dp"
                android:autofillHints="postCategory"
                android:hint="@string/post_cat_input"
                android:inputType="text"
                android:textSize="16sp" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="My Location:"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/GPSLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="My Location:"
            android:textColor="#515151"
            android:textSize="18sp" />


    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/postDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/post_description_label"
                android:textSize="16sp" />

            <EditText

                android:id="@+id/descriptionTextField"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/post_description_input"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textSize="16sp" />

        </LinearLayout>

    <Button
        android:id="@+id/postimagebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="select images"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/postButtonParent"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="start"
        android:orientation="horizontal">

        <Button
            android:id="@+id/postButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/post_button_label"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:text="@string/status_label"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>